Origin Class List And Sprite

--- a/src/components/PageContent/PageDateBar.astro
+++ b/src/components/PageContent/PageDateBar.astro
@@ -1,24 +1,24 @@
 ---
-const { dateString } = Astro.props;
+const { dateTitle, dateString } = Astro.props;
 ---
 
 <p class="date-bar-string">
-	⠀⠀Log Date : {new Date(dateString).toLocaleDateString()}
+  ⠀⠀{dateTitle} : {("0" + new Date(dateString).getDate()).slice(-2)} / {("0" + (new Date(dateString).getMonth() + 1)).slice(-2)} / {new Date(dateString).getFullYear()}
 </p>
 
 <style>
-	.date-bar-string {
-		font-weight: bold;
-		--border-radius: 6px;
-		--padding-block: 0.2rem;
-		--padding-inline: 0.3rem;
-		font-family: var(--font-mono);
-		font-size: 0.9em;
-		color: var(--theme-code-inline-text);
-		background-color: var(--theme-code-inline-bg);
-		padding: var(--padding-block) var(--padding-inline);
-		margin: calc(var(--padding-block) * -1) 0;
-		border-radius: var(--border-radius);
-		word-break: break-word;
-	}
+  .date-bar-string {
+    font-weight: bold;
+    --border-radius: 6px;
+    --padding-block: 0.2rem;
+    --padding-inline: 0.3rem;
+    font-family: var(--font-mono);
+    font-size: 0.9em;
+    color: var(--theme-code-inline-text);
+    background-color: var(--theme-code-inline-bg);
+    padding: var(--padding-block) var(--padding-inline);
+    margin: calc(var(--padding-block) * -1) 0;
+    border-radius: var(--border-radius);
+    word-break: break-word;
+  }
 </style>
